unpackaged/main/default/objects/Account/fields/Contact_information__c.field-meta.xml
<CustomField>
    <fullName>Contact_information__c</fullName>
    <label>Contact information</label>
    <length>100</length>
    <type>Text</type>
</CustomField>