unpackaged/main/default/objects/Account/fields/New_account_ID__c.field-meta.xml
<CustomField>
    <fullName>New_account_ID__c</fullName>
    <label>New account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>