unpackaged/main/default/objects/Account/fields/New_Client_information__c.field-meta.xml
<CustomField>
    <fullName>New_Client_information__c</fullName>
    <label>New Client information</label>
    <length>100</length>
    <type>Text</type>
</CustomField>