unpackaged/main/default/objects/Account/fields/New_important_Account_info__c.field-meta.xml
<CustomField>
    <fullName>New_important_Account_info__c</fullName>
    <label>New important Account info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>