unpackaged/main/default/objects/Account/fields/Test_Account_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Account_Field__c</fullName>
    <label>Test Account Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>